--- a/app/view/index/index.html
+++ b/app/view/index/index.html
@@ -1,87 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css" />
-    <title>Document</title>
-  </head>
-  <style>
-    .banner-png {
-      width: 100%;
-      height: 350px;
-      min-height: 200px;
-      min-width: 200px;
-      object-fit: cover;
-      overflow: hidden;
-      vertical-align: top;
-      text-overflow: ellipsis;
-    }
-  </style>
-  <body>
-    <header class="bg-dark text-light">
-      <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#"
-              ><img
-                src="https://coinrexx.com/images/logo.png"
-                style="height: 35px"
-                alt=""
-            /></a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
-                    >首页</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">产品介绍</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href="#"
-                    id="navbarDropdown"
-                    role="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    编程语言
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">HTML</a></li>
-                    <li><a class="dropdown-item" href="#">JAVASCRIPT</a></li>
-                    <li><a class="dropdown-item" href="#">JAVA</a></li>
-                    <li><a class="dropdown-item" href="#">PHP</a></li>
-                  </ul>
-                </li>
-              </ul>
-              <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-                <button class="btn btn-success text-nowrap mx-2">登录 | 注册</button>
-              </form>
+{extend name="base"}
 
-
-            </div>
-          </div>
-        </nav>
-      </div>
-    </header>
-
+{block name="title"}
+首页
+{/block}
+{block name="main"}
     <section>
       <div class="container">
         <div
@@ -209,6 +131,4 @@
       </div>
     </section>
 
-    <script src="/static/bootstrap/js/bootstrap.min.js"></script>
-  </body>
-</html>
+    {/block}
