--- a/app/view/base.html
+++ b/app/view/base.html
@@ -17,6 +17,9 @@
       vertical-align: top;
       text-overflow: ellipsis;
     }
+    body{
+      background-color: #F5F5F5;
+    }
   </style>
   <body>
     <header class="bg-dark text-light">
