--- a/app/view/index/list.html
+++ b/app/view/index/list.html
@@ -1,62 +1,159 @@
-{extend name="base"}
-
-{block name="title"}列表页{/block}
-{block name="main"}
-<section>
-    <div class="container">
-        <div class="card-group">
-            <div class="card">
-              <img src="/static/img/banner1.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="/static/img/banner2.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="/static/img/banner3.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
+{extend name="base"} {block name="title"}列表页{/block} {block name="main"}
+<section class="mt-3">
+  <div class="container">
+    <div class="row">
+      <div class="col mb-4">
+        <div class="card" style="width: 18rem">
+          <img src="/static/img/banner1.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <a class="card-text" href="/article-1.html"
+              >Some quick example text to build on the card title and make up
+              the bulk of the card's content.</a
+            >
           </div>
-          <div class="card-group">
-            <div class="card">
-              <img src="/static/img/banner1.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="/static/img/banner2.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="/static/img/banner3.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card" style="width: 18rem">
+          <img src="/static/img/banner1.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <a class="card-text" href="/article-1.html"
+              >Some quick example text to build on the card title and make up
+              the bulk of the card's content.</a
+            >
           </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card" style="width: 18rem">
+          <img src="/static/img/banner1.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <a class="card-text" href="/article-1.html"
+              >Some quick example text to build on the card title and make up
+              the bulk of the card's content.</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card" style="width: 18rem">
+          <img src="/static/img/banner1.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <a class="card-text" href="/article-1.html"
+              >Some quick example text to build on the card title and make up
+              the bulk of the card's content.</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card" style="width: 18rem">
+          <img src="/static/img/banner2.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <a class="card-text" href="/article-1.html"
+              >Some quick example text to build on the card title and make up
+              the bulk of the card's content.</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card" style="width: 18rem">
+          <img src="/static/img/banner3.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <a class="card-text" href="/article-1.html"
+              >Some quick example text to build on the card title and make up
+              the bulk of the card's content.</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card" style="width: 18rem">
+          <img src="/static/img/banner1.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <a class="card-text" href="/article-1.html"
+              >Some quick example text to build on the card title and make up
+              the bulk of the card's content.</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card" style="width: 18rem">
+          <img src="/static/img/banner2.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <a class="card-text" href="/article-1.html"
+              >Some quick example text to build on the card title and make up
+              the bulk of the card's content.</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card" style="width: 18rem">
+          <img src="/static/img/banner3.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <a class="card-text" href="/article-1.html"
+              >Some quick example text to build on the card title and make up
+              the bulk of the card's content.</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card" style="width: 18rem">
+          <img src="/static/img/banner1.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <a class="card-text" href="/article-1.html"
+              >Some quick example text to build on the card title and make up
+              the bulk of the card's content.</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card" style="width: 18rem">
+          <img src="/static/img/banner1.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <a class="card-text" href="/article-1.html"
+              >Some quick example text to build on the card title and make up
+              the bulk of the card's content.</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card" style="width: 18rem">
+          <img src="/static/img/banner1.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <a class="card-text" href="/article-1.html"
+              >Some quick example text to build on the card title and make up
+              the bulk of the card's content.</a
+            >
+          </div>
+        </div>
+      </div>
     </div>
+
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </section>
 
 {/block}
