--- a/app/view/index/article.html
+++ b/app/view/index/article.html
@@ -3,6 +3,13 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-9 col-12 bg-white p-3 mb-5">
+
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+
+          
         <h4>Lorem ipsum dolor sit amet consecte Nisi repellendus quaerat</h4>
         <div class="mt-3">
           <a href="" class="btn btn-info btn-sm me-2">lorem</a>
@@ -31,7 +38,16 @@
             </div>
         </div>
       </div>
-      <div class="col-lg-3 col-12 bg-white">3</div>
+      <div class="col-lg-3 col-12">
+        <div class="bg-white p-3">
+            <span class="text-success">嗨！朋友</span>
+            <br>
+            所有的伟大，都源于一个勇敢的开始
+        </div>
+        <div class="bg-white p-3 mt-3">
+            这是公告
+        </div>
+      </div>
     </div>
   </div>
 </section>
