--- a/app/view/index/index.html
+++ b/app/view/index/index.html
@@ -6,52 +6,27 @@
 {block name="main"}
     <section>
       <div class="container">
-        <div
-          id="carouselExampleControls"
-          class="carousel slide"
-          data-bs-ride="carousel"
-        >
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img
-                src="/static/img/banner1.png"
-                class="d-block w-100 banner-png"
-                alt="..."
-              />
+              <img src="/static/img/banner1.png" class="d-block w-100 banner-png" alt="...">
             </div>
             <div class="carousel-item">
-              <img
-                src="/static/img/banner2.png"
-                class="d-block w-100 banner-png"
-                alt="..."
-              />
+              <img src="/static/img/banner2.png" class="d-block w-100 banner-png" alt="...">
             </div>
             <div class="carousel-item">
-              <img
-                src="/static/img/banner3.png"
-                class="d-block w-100 banner-png"
-                alt="..."
-              />
+              <img src="/static/img/banner3.png" class="d-block w-100 banner-png" alt="...">
             </div>
           </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev"
-          >
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExampleControls"
-            data-bs-slide="next"
-          >
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
-          </button>
+          </a>
+        </div>
         </div>
       </div>
     </section>
@@ -59,74 +34,26 @@
     <section class="py-5 justify-content-center align-item-center bg-dark">
       <div class="container text-center">
         <div class="row g-4 justify-content-center align-items-center mx-auto">
+
+          {volist name="list" id="v"}
           <div class="col md-2 lg-4 mx-auto">
             <div class="card mx-auto" style="width: 18rem">
               <img
-                src="/static/img/banner3.png"
+                src="{$v.img}"
                 class="card-img-top"
                 alt="..."
               />
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  <a href="/article-{$v.id}.html">
+                    {$v.content}
+                  </a>
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
           </div>
-          <div class="col md-2 lg-4 mx-auto">
-            <div class="card mx-auto" style="width: 18rem">
-              <img
-                src="/static/img/banner2.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col md-2 lg-4 mx-auto">
-            <div class="card mx-auto" style="width: 18rem">
-              <img
-                src="/static/img/banner1.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col md-2 lg-4 mx-auto">
-            <div class="card mx-auto" style="width: 18rem">
-              <img
-                src="/static/img/banner2.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
+          {/volist}
         </div>
       </div>
     </section>
